name: ccweb
version: 1.0.0.0
build-type: Simple
cabal-version: >=1.10

executable cctangle
  main-is: bin/cctangle.hs
  build-depends:
                ansi-terminal, base, containers, directory, filepath, hostname,
                mtl, optparse-applicative, parsec, pretty, unix
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2 -rtsopts
  hs-source-dirs: .
  other-modules:

executable ccweave
  main-is: bin/ccweave.hs
  build-depends:
                ansi-terminal, base, containers, directory, filepath, hostname,
                mtl, optparse-applicative, parsec, pretty, unix
  default-language: Haskell2010
  ghc-options: -Wall -O2 -rtsopts
  hs-source-dirs: .
  other-modules:
